feat: change manual payment to midtrans

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "masmerise/livewire-toaster": "^2.6",
+        "midtrans/midtrans-php": "^2.6",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
