--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "filament/filament": "3.x",
         "flowframe/laravel-trend": "^0.3.0",
+        "kavist/rajaongkir": "1.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
