--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dasundev/livewire-dropzone": "^2.0",
         "filament/filament": "3.x",
         "filament/notifications": "3.x",
         "flowframe/laravel-trend": "^0.3.0",
