--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@dasundev/livewire-dropzone-styles": "^2.0.2",
         "bootstrap": "^5.3.3",
         "flyonui": "^1.1.0"
     }
